--- a/pages/bio.html
+++ b/pages/bio.html
@@ -14,7 +14,13 @@
             <!--MENU NAV-->
             <nav id="navBar">
                 <article class="LogoHeader">
-                    <h4><a href="../index.html">mara zuker</a></h4> <br>
+                    <h4><a href="#">mara zuker</a></h4>
+                </article>
+                <input type="checkbox" id="check">
+                <article class="barras">
+                <label for="check" class="checktn">
+                    <i class="fas fa-bars"></i>
+                </label>
                 </article>
                 <article class="MenuNav">
                     <ul> 
@@ -23,7 +29,7 @@
                         <li><a href="lugares.html">lugares</a></li>
                         <li><a href="#">bio</a></li>
                         <li><a href="contacto.html">contacto</a></li>
-                </ul>
+                    </ul>
                 </article>
             </nav>
         </header>
@@ -50,7 +56,7 @@
         <footer id="footer">
             <!--CAJA#1 LOGONOMBRE-->
             <article class="footerLogonombre">
-                <h4>MARA ZUKER</h4> <br>
+                <h4>mara zuker</h4> <br>
                 <p> Copyright © All rights reserved.</p>
             </article>
 
