--- a/pages/bio.html
+++ b/pages/bio.html
@@ -14,7 +14,7 @@
             <!--MENU NAV-->
             <nav id="navBar">
                 <article class="LogoHeader">
-                    <h4><a href="#">mara zuker</a></h4>
+                    <h4><a href="../index.html">mara zuker</a></h4>
                 </article>
                 <input type="checkbox" id="check">
                 <article class="barras">
@@ -43,7 +43,7 @@
             <section id="contenedorTextobio">
                 <article class="biografiaParrafo">
                 <p>Mara Zuker es una fotógrafa argentina oriunda de la ciudad de Buenos Aires, formada en la Escuela Nacional de Realización y Experimentación Cinematográfica. Es allí donde tiene su primer contacto con la cinematografía y fotografía fílmica. Sus proyectos son enteramente en 35 mm e incluyen fotografía de viajes, paisajes, retratos y desnudos. Su trabajo explora temas de soledad, nostalgia, cercanía y luz. La estética cinematográfica juega un papel importante en su trabajo, explotando el uso de enfoque suave, matices de color, así como las texturas típicas del filmico, siendo parte del proceso y documentación de su identidad y  entorno.
-                </article>
+                </article> <br>
                 <article class="biografiaAbout">
                 <p>1991, based in Bs.As., analog  photographer.</p> <br> <br>
                 <p>tamizukierman@gmail.com</p>
